<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context="com.keika.thunghiem01.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/layout_activity_main_title"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"
        android:textStyle="normal|bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@drawable/shape_1"
            android:gravity="center|left"
            android:paddingLeft="10dp"
            android:text="@string/layout_activity_main_table_column1"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/shape_1"
            android:gravity="center|left"
            android:paddingLeft="2dp"
            android:text="@string/layout_activity_main_table_column2"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@drawable/shape_1"
            android:gravity="center|left"
            android:paddingLeft="2dp"
            android:text="@string/layout_activity_main_table_column3"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

    <ListView
        android:id="@+id/activity_main_listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5.5"></ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/activity_main_buttonaddnew"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/shape_2"
            android:minHeight="32dp"
            android:text="@string/layout_activity_main_table_buttonThem"
            android:textColor="@color/colorWhite" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/shape_2"
            android:minHeight="32dp"
            android:text="@string/layout_activity_main_table_buttonDieuChinh"
            android:textColor="@color/colorWhite" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/shape_2"
            android:minHeight="32dp"
            android:text="@string/layout_activity_main_table_buttonXoa"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

</LinearLayout>
