<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="2dp"
    tools:context="com.keika.thunghiem01.DialogAmountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:gravity="start|center"
                android:text="@string/layout_activity_dialogamount_row1_c1"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/activity_dialog_amount_tvMaSP"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7.5"
                android:gravity="center"
                android:hint="@string/layout_activity_dialogamount_textview_default" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:gravity="start|center"
                android:text="@string/layout_activity_dialogamount_row2_c1"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/activity_dialog_amount_tvTenSP"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7.5"
                android:gravity="center"
                android:hint="@string/layout_activity_dialogamount_textview_default" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:gravity="start|center"
                android:text="@string/layout_activity_dialogamount_row3_c1"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/activity_dialog_amount_tvGiaSP"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7.5"
                android:gravity="center"
                android:hint="@string/layout_activity_dialogamount_textview_default" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:gravity="start|center"
                android:text="@string/layout_activity_dialogamount_row4_c1"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/activity_dialog_amount_tvSoLuongTon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7.5"
                android:gravity="center"
                android:hint="@string/layout_activity_dialogamount_textview_default" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:gravity="start|center"
                android:text="@string/layout_activity_dialogamount_row5_c1"
                android:textStyle="normal|bold" />

            <EditText
                android:id="@+id/activity_dialog_amount_edtSoLuong"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5.5"
                android:hint="@string/layout_activity_dialogamount_row5_c2" />

            <TextView
                android:id="@+id/activity_dialog_amount_Max"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:hint="@string/layout_activity_dialogamount_textview_default" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/activity_dialog_amount_buttonHuy"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/shape_3"
            android:text="@string/layout_activity_dialogamount_buttoncancel" />

        <Button
            android:id="@+id/activity_dialog_amount_buttonDongY"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/shape_3"
            android:text="@string/layout_activity_dialogamount_buttonok" />
    </LinearLayout>

</LinearLayout>
